--- a/main.html
+++ b/main.html
@@ -4,10 +4,14 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+ 
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<H1>Welcome to Sync5</H1>
+	<car
     <script type="text/javascript" src="./script.js">
 </script>
 
